Altered headings to match page scans of Loeb edition

--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -9,7 +9,7 @@
 		<section id="book-1" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">I</span></h2>
 			<section id="chapter-1" epub:type="chapter">
-				<h3 epub:type="title">The Life of Julius</h3>
+				<h3 epub:type="title">The Deified Julius</h3>
 				<ol class="roman">
 					<li id="book-1-1">
 						<p>
