--- a/src/epub/text/book-5.xhtml
+++ b/src/epub/text/book-5.xhtml
@@ -9,7 +9,7 @@
 		<section id="book-5" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">V</span></h2>
 			<section id="chapter-5" epub:type="chapter">
-				<h3 epub:type="title">The Life of Claudius</h3>
+				<h3 epub:type="title">The Deified Claudius</h3>
 				<ol class="roman">
 					<li id="book-5-1">
 						<p>
