--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -9,10 +9,10 @@
 		<section id="book-8" epub:type="part">
 			<h2 epub:type="title">
 				<span>Book <span epub:type="z3998:roman">VIII</span></span>
-				<span epub:type="subtitle">Vespasian⁠—Titus⁠—Domitian</span>
+				<span epub:type="subtitle">The Deified Vespasian⁠—The Deified Titus⁠—Domitian</span>
 			</h2>
 			<section id="book-8-1" epub:type="chapter">
-				<h3 epub:type="title">The Life of Vespasian</h3>
+				<h3 epub:type="title">The Deified Vespasian</h3>
 				<ol class="roman">
 					<li id="book-8-1-1">
 						<p>The empire, which for a long time had been unsettled and, as it were, drifting, through the usurpation and violent death of three emperors, was at last taken in hand and given stability by the Flavian family. This house was, it is true, obscure and without family portraits, yet it was one of which our country had no reason whatever to be ashamed, even though it is the general opinion that the penalty which Domitian paid for his avarice and cruelty was fully merited.</p>
@@ -147,7 +147,7 @@
 				</ol>
 			</section>
 			<section id="book-8-2" epub:type="chapter">
-				<h3 epub:type="title">The Life of Titus</h3>
+				<h3 epub:type="title">The Deified Titus</h3>
 				<ol class="roman">
 					<li id="book-8-2-1">
 						<p>Titus, of the same surname as his father, was the delight and darling of the human race; such surpassing ability had he, by nature, art, or good fortune, to win the affections of all men, and that, too, which is no easy task, while he was emperor; for as a private citizen, and even during his father’s rule, he did not escape hatred, much less public criticism.</p>
@@ -201,7 +201,7 @@
 				</ol>
 			</section>
 			<section id="book-8-3" epub:type="chapter">
-				<h3 epub:type="title">The Life of Domitian</h3>
+				<h3 epub:type="title">Domitian</h3>
 				<ol class="roman">
 					<li id="book-8-3-1">
 						<p>
