--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -17,7 +17,7 @@
 					<a href="text/book-1.xhtml">Book <span epub:type="z3998:roman">I</span></a>
 					<ol>
 						<li>
-							<a href="text/book-1.xhtml#chapter-1">The Life of Julius</a>
+							<a href="text/book-1.xhtml#chapter-1">The Deified Julius</a>
 						</li>
 					</ol>
 				</li>
@@ -25,7 +25,7 @@
 					<a href="text/book-2.xhtml">Book <span epub:type="z3998:roman">II</span></a>
 					<ol>
 						<li>
-							<a href="text/book-2.xhtml#chapter-2">The Life of Augustus</a>
+							<a href="text/book-2.xhtml#chapter-2">The Deified Augustus</a>
 						</li>
 					</ol>
 				</li>
@@ -33,7 +33,7 @@
 					<a href="text/book-3.xhtml">Book <span epub:type="z3998:roman">III</span></a>
 					<ol>
 						<li>
-							<a href="text/book-3.xhtml#chapter-3">The Life of Tiberius</a>
+							<a href="text/book-3.xhtml#chapter-3">Tiberius</a>
 						</li>
 					</ol>
 				</li>
@@ -41,7 +41,7 @@
 					<a href="text/book-4.xhtml">Book <span epub:type="z3998:roman">IV</span></a>
 					<ol>
 						<li>
-							<a href="text/book-4.xhtml#chapter-4">The Life of Caligula</a>
+							<a href="text/book-4.xhtml#chapter-4">Gaius Caligula</a>
 						</li>
 					</ol>
 				</li>
@@ -49,7 +49,7 @@
 					<a href="text/book-5.xhtml">Book <span epub:type="z3998:roman">V</span></a>
 					<ol>
 						<li>
-							<a href="text/book-5.xhtml#chapter-5">The Life of Claudius</a>
+							<a href="text/book-5.xhtml#chapter-5">The Deified Claudius</a>
 						</li>
 					</ol>
 				</li>
@@ -57,7 +57,7 @@
 					<a href="text/book-6.xhtml">Book <span epub:type="z3998:roman">VI</span></a>
 					<ol>
 						<li>
-							<a href="text/book-6.xhtml#chapter-1">The Life of Nero</a>
+							<a href="text/book-6.xhtml#chapter-1">Nero</a>
 						</li>
 					</ol>
 				</li>
@@ -65,27 +65,27 @@
 					<a href="text/book-7.xhtml">Book <span epub:type="z3998:roman">VII</span>: Galba⁠—Otho⁠—Vitellius</a>
 					<ol>
 						<li>
-							<a href="text/book-7.xhtml#book-7-1">The Life of Galba</a>
+							<a href="text/book-7.xhtml#book-7-1">Galba</a>
 						</li>
 						<li>
-							<a href="text/book-7.xhtml#book-7-2">The Life of Otho</a>
+							<a href="text/book-7.xhtml#book-7-2">Otho</a>
 						</li>
 						<li>
-							<a href="text/book-7.xhtml#book-7-3">The Life of Vitellius</a>
+							<a href="text/book-7.xhtml#book-7-3">Vitellius</a>
 						</li>
 					</ol>
 				</li>
 				<li>
-					<a href="text/book-8.xhtml">Book <span epub:type="z3998:roman">VIII</span>: Vespasian⁠—Titus⁠—Domitian</a>
+					<a href="text/book-8.xhtml">Book <span epub:type="z3998:roman">VIII</span>: The Deified Vespasian⁠—The Deified Titus⁠—Domitian</a>
 					<ol>
 						<li>
-							<a href="text/book-8.xhtml#book-8-1">The Life of Vespasian</a>
+							<a href="text/book-8.xhtml#book-8-1">The Deified Vespasian</a>
 						</li>
 						<li>
-							<a href="text/book-8.xhtml#book-8-2">The Life of Titus</a>
+							<a href="text/book-8.xhtml#book-8-2">The Deified Titus</a>
 						</li>
 						<li>
-							<a href="text/book-8.xhtml#book-8-3">The Life of Domitian</a>
+							<a href="text/book-8.xhtml#book-8-3">Domitian</a>
 						</li>
 					</ol>
 				</li>
