--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -9,7 +9,7 @@
 		<section id="book-2" epub:type="part">
 			<h2 epub:type="title">Book <span epub:type="z3998:roman">II</span></h2>
 			<section id="chapter-2" epub:type="chapter">
-				<h3 epub:type="title">The Life of Augustus</h3>
+				<h3 epub:type="title">The Deified Augustus</h3>
 				<ol class="roman">
 					<li id="book-2-1">
 						<p>There are many indications that the Octavian family was in days of old a distinguished one at Velitrae; for not only was a street in the most frequented part of town long ago called Octavian, but an altar was shown there besides, consecrated by an Octavius. This man was leader in a war with a neighbouring town, and when news of a sudden onset of the enemy was brought to him just as he chanced to be sacrificing to Mars, he snatched the inwards of the victim from the fire and offered them up half raw; and thus he went forth to battle, and returned victorious. There was, besides, a decree of the people on record, providing that for the future too the inwards should be offered to Mars in the same way, and the rest of the victims be handed over to the Octavii.</p>
