--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -12,7 +12,7 @@
 				<span epub:type="subtitle">Galba⁠—Otho⁠—Vitellius</span>
 			</h2>
 			<section id="book-7-1" epub:type="chapter">
-				<h3 epub:type="title">The Life of Galba</h3>
+				<h3 epub:type="title">Galba</h3>
 				<ol class="roman">
 					<li id="book-7-1-1">
 						<p>The race of the Caesars ended with Nero.<a href="endnotes.xhtml#note-728" id="noteref-728" epub:type="noteref">728</a> That this would be so was shown by many portents and especially by two very significant ones. Years before, as Livia was returning to her estate near Veii, immediately after her marriage with Augustus, an eagle which flew by dropped into her lap a white hen, holding in its beak a sprig of laurel, just as the eagle had carried it off. Livia resolved to rear the fowl and plant the sprig, whereupon such a great brood of chickens was hatched that to this day the villa is called <i xml:lang="la">Ad Gallinas</i>,<a href="endnotes.xhtml#note-729" id="noteref-729" epub:type="noteref">729</a> and such a grove of laurel sprang up, that the Caesars gathered their laurels from it when they were going to celebrate triumphs. Moreover it was the habit of those who triumphed to plant other branches<a href="endnotes.xhtml#note-730" id="noteref-730" epub:type="noteref">730</a> at once in that same place, and it was observed that just before the death of each of them the tree which he had planted withered. Now in Nero’s last year the whole grove died from the root up, as well as all the hens. Furthermore, when shortly afterwards the temple of the Caesars<a href="endnotes.xhtml#note-731" id="noteref-731" epub:type="noteref">731</a> was struck by lightning, the heads fell from all the statues at the same time, and his sceptre, too, was dashed from the hand of Augustus.</p>
@@ -139,7 +139,7 @@
 				</ol>
 			</section>
 			<section id="book-7-2" epub:type="chapter">
-				<h3 epub:type="title">The Life of Otho</h3>
+				<h3 epub:type="title">Otho</h3>
 				<ol class="roman">
 					<li id="book-7-2-1">
 						<p>The ancestors of Otho came from an old and illustrious family in the town of Ferentium and were descended from the princes of Etruria.<a href="endnotes.xhtml#note-782" id="noteref-782" epub:type="noteref">782</a> His grandfather Marcus Salvius Otho, whose father was a Roman knight but whose mother was of lowly origin and perhaps not even freeborn, became a senator through the influence of Livia Augusta, in whose house he was reared; but did not advance beyond the grade of praetor.</p>
@@ -200,7 +200,7 @@
 				</ol>
 			</section>
 			<section id="book-7-3" epub:type="chapter">
-				<h3 epub:type="title">The Life of Vitellius</h3>
+				<h3 epub:type="title">Vitellius</h3>
 				<ol class="roman">
 					<li id="book-7-3-1">
 						<p>Of the origin of the Vitellii different and widely varying accounts are given, some saying that the family was ancient and noble, others that it was new and obscure, if not of mean extraction. I should believe that these came respectively from the flatterers and detractors of the emperor, were it not for a difference of opinion about the standing of the family at a considerably earlier date. We have a book of Quintus Elogius addressed to Quintus Vitellius, quaestor of the Deified Augustus, in which it is written that the Vitellii were sprung from Faunus, king of the Aborigines, and Vitellia, who was worshipped as a goddess in many places;’ and that they ruled in all Latium. That the surviving members of the family moved from the Sabine district to Rome and were enrolled among the patricians. That traces of this stock endured long afterwards in the Vitellian Road, running from the Janiculum all the way to the sea, as well as in a colony of the same name, which in ancient days the family had asked the privilege of defending against the Aequicoli with troops raised from their own line. That when afterwards a force was sent into Apulia at the time of the Samnite war, some of the Vitellii settled at Nuceria, and that after a long time their descendants returned to the city and resumed their place in the senatorial order.</p>
