--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -13,7 +13,9 @@
 			</header>
 			<p><i epub:type="se:name.publication.book">The Lives of the Caesars</i><br/>
 			was written between 117 and 119 by<br/>
-			<a href="https://en.wikipedia.org/wiki/Suetonius">Suetonius</a>.</p>
+			<a href="https://en.wikipedia.org/wiki/Suetonius">Suetonius</a>.<br/>
+			It was translated from Latin in 1913 by<br/>
+			<a href="https://en.wikipedia.org/wiki/John_Carew_Rolfe">John Carew Rolfe</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
