[Editorial] Modernize hyphenation and spelling. Issue #1

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -1066,7 +1066,7 @@
 					<p>A title originally applied to the king of Persia and transferred to the king of the Parthians. <a href="book-4.xhtml#noteref-351" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-352" epub:type="endnote">
-					<p>The Saturnalia: the principal festival of the Romans, beginning on December 17 and lasting for several days, in honour of Saturn. It was a time of general merry-making. See also <abbr>cf.</abbr> note on <i epub:type="se:name.publication.book">Augustus</i>, <a href="book-2.xhtml#book-2-71"><span epub:type="z3998:roman">LXXI</span>.1</a>. <a href="book-4.xhtml#noteref-352" epub:type="se:referrer">↩</a></p>
+					<p>The Saturnalia: the principal festival of the Romans, beginning on December 17 and lasting for several days, in honour of Saturn. It was a time of general merrymaking. See also <abbr>cf.</abbr> note on <i epub:type="se:name.publication.book">Augustus</i>, <a href="book-2.xhtml#book-2-71"><span epub:type="z3998:roman">LXXI</span>.1</a>. <a href="book-4.xhtml#noteref-352" epub:type="se:referrer">↩</a></p>
 				</li>
 				<li id="note-353" epub:type="endnote">
 					<p><abbr>Cf.</abbr> <i epub:type="se:name.publication.book">Tiberius</i>, <a href="book-3.xhtml#book-3-54" epub:type="z3998:roman">LIV</a>. <a href="book-4.xhtml#noteref-353" epub:type="se:referrer">↩</a></p>
@@ -2920,4 +2920,3 @@
 		</section>
 	</body>
 </html>
-
