Fixed some missing spans in verses. Issue #1

--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -234,7 +234,9 @@
 					<li id="book-1-49">
 						<p>There was no stain on his reputation for chastity except his intimacy with King Nicomedes, but that was a deep and lasting reproach, which laid him open to insults from every quarter. I say nothing of the notorious lines of Licinius Calvus:</p>
 						<blockquote epub:type="z3998:verse">
-							<p>“Whate’er Bithynia had, and Caesar’s paramour.”</p>
+							<p>
+								<span>“Whate’er Bithynia had, and Caesar’s paramour.”</span>
+							</p>
 						</blockquote>
 						<p>I pass over, too, the invectives of Dolabella and the elder Curio, in which Dolabella calls him “the queen’s rival, the inner partner of the royal couch,” and Curio, “the brothel of Nicomedes and the stew of Bithynia.” I take no account of the edicts of Bibulus, in which he posted his colleague as “the queen of Bithynia,” saying that “of yore he was enamoured of a king, but now of a king’s estate.” At this same time, so Marcus Brutus declares, one Octavius, a man whose disordered mind made him somewhat free with his tongue, after saluting Pompey as “king” in a crowded assembly, greeted Caesar as “queen.” But Gaius Memmius makes the direct charge that he acted as cupbearer to Nicomedes with the rest of his wantons at a large dinner-party, and that among the guests were some merchants from Rome, whose names Memmius gives. Cicero, indeed, is not content with having written in sundry letters that Caesar was led by the king’s attendants to the royal apartments, that he lay on a golden couch arrayed in purple, and that the virginity of this son of Venus was lost in Bithynia; but when Caesar was once addressing the senate in defence of Nysa, daughter of Nicomedes, and was enumerating his obligations to the king, Cicero cried: “No more of that, pray, for it is well known what he gave you, and what you gave him in turn.” Finally, in his Gallic triumph his soldiers, among the bantering songs which are usually sung by those who followed the chariot, shouted these lines, which became a byword:</p>
 						<blockquote epub:type="z3998:verse">
