--- a/src/epub/text/book-2.xhtml
+++ b/src/epub/text/book-2.xhtml
@@ -529,13 +529,17 @@
 							<span id="book-2-98-4">He called the neighbouring part of the island of Capreae Apragopolis<a href="endnotes.xhtml#note-230" id="noteref-230" epub:type="noteref">230</a> from the laziness of some of his company who sojourned there. Besides he used to call one of his favourites, Masgaba by name, Ktistes,<a href="endnotes.xhtml#note-231" id="noteref-231" epub:type="noteref">231</a> as if he were the founder of the island. Noticing from his dining-room that the tomb of this Masgaba, who had died the year before, was visited by a large crowd with many torches, he uttered aloud this verse, composed offhand:</span>
 						</p>
 						<blockquote epub:type="z3998:verse">
-							<p>“I see the founder’s tomb alight with fire;”</p>
+							<p>
+								<span>“I see the founder’s tomb alight with fire;”</span>
+							</p>
 						</blockquote>
 						<p>
 							<span id="book-2-98-4-1">and turning to Thrasyllus, one of the suite of Tiberius who was reclining opposite him and knew nothing about the matter, he asked of what poet he thought it was the work. When Thrasyllus hesitated, he added another verse:</span>
 						</p>
 						<blockquote epub:type="z3998:verse">
-							<p>“See you with lights Masgaba honoured now?”</p>
+							<p>
+								<span>“See you with lights Masgaba honoured now?”</span>
+							</p>
 						</blockquote>
 						<p>
 							<span id="book-2-98-4-2">and asked his opinion of this one also. When Thrasyllus could say nothing except that they were very good, whoever made them, he burst into a laugh and fell a joking above it.</span>
