Restructured books and chapters.

--- a/src/epub/text/book-7.xhtml
+++ b/src/epub/text/book-7.xhtml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Book 7</title>
+		<title>Book 7: Galba⁠—Otho⁠—Vitellius</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-7" epub:type="part">
 			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">VII</span></span>
+				<span epub:type="z3998:roman">VII</span>
 				<span epub:type="subtitle">Galba⁠—Otho⁠—Vitellius</span>
 			</h2>
 			<section id="book-7-1" epub:type="chapter">
 				<h3 epub:type="title">Galba</h3>
-				<ol class="roman">
+				<ol>
 					<li id="book-7-1-1">
 						<p>The race of the Caesars ended with Nero.<a href="endnotes.xhtml#note-728" id="noteref-728" epub:type="noteref">728</a> That this would be so was shown by many portents and especially by two very significant ones. Years before, as Livia was returning to her estate near Veii, immediately after her marriage with Augustus, an eagle which flew by dropped into her lap a white hen, holding in its beak a sprig of laurel, just as the eagle had carried it off. Livia resolved to rear the fowl and plant the sprig, whereupon such a great brood of chickens was hatched that to this day the villa is called <i xml:lang="la">Ad Gallinas</i>,<a href="endnotes.xhtml#note-729" id="noteref-729" epub:type="noteref">729</a> and such a grove of laurel sprang up, that the Caesars gathered their laurels from it when they were going to celebrate triumphs. Moreover it was the habit of those who triumphed to plant other branches<a href="endnotes.xhtml#note-730" id="noteref-730" epub:type="noteref">730</a> at once in that same place, and it was observed that just before the death of each of them the tree which he had planted withered. Now in Nero’s last year the whole grove died from the root up, as well as all the hens. Furthermore, when shortly afterwards the temple of the Caesars<a href="endnotes.xhtml#note-731" id="noteref-731" epub:type="noteref">731</a> was struck by lightning, the heads fell from all the statues at the same time, and his sceptre, too, was dashed from the hand of Augustus.</p>
 					</li>
@@ -140,7 +140,7 @@
 			</section>
 			<section id="book-7-2" epub:type="chapter">
 				<h3 epub:type="title">Otho</h3>
-				<ol class="roman">
+				<ol>
 					<li id="book-7-2-1">
 						<p>The ancestors of Otho came from an old and illustrious family in the town of Ferentium and were descended from the princes of Etruria.<a href="endnotes.xhtml#note-782" id="noteref-782" epub:type="noteref">782</a> His grandfather Marcus Salvius Otho, whose father was a Roman knight but whose mother was of lowly origin and perhaps not even freeborn, became a senator through the influence of Livia Augusta, in whose house he was reared; but did not advance beyond the grade of praetor.</p>
 						<p>His father Lucius Otho was of a distinguished family on his mother’s side, with many powerful connections, and was so beloved by Tiberius and so like him in appearance, that he was believed by many to be the emperor’s son. In the regular offices at Rome, the proconsulate of Africa, and several special military commands he conducted himself with extreme severity. In Illyricum he even had the courage to punish some soldiers with death, because in the rebellion of Camillus,<a href="endnotes.xhtml#note-783" id="noteref-783" epub:type="noteref">783</a> repenting of their defection, they had killed their officers on the ground that they were the ringleaders in the revolt against Claudius; and they were executed in his presence before his headquarters, although he knew that they had been promoted to higher positions by Claudius because of that very act. By this deed, while he increased his reputation, he lost favour at court; but he speedily regained it by detecting the treachery of a Roman knight, whose slaves betrayed their master’s design of killing the emperor.<a href="endnotes.xhtml#note-784" id="noteref-784" epub:type="noteref">784</a> For in consequence of this, the senate conferred a very unusual honour on him by setting up his statue in the Palace; and Claudius also enrolled him among the patricians, and after praising him in the highest terms, added these words: “a man of greater loyalty than I can even pray for in my own children.” By Albia Terentia, a woman of an illustrious line, he had two sons, Lucius Titianus and a younger called Marcus, who had the same surname as himself; also a daughter, whom he betrothed to Drusus, son of Germanicus, almost before she was of marriageable age.</p>
@@ -201,7 +201,7 @@
 			</section>
 			<section id="book-7-3" epub:type="chapter">
 				<h3 epub:type="title">Vitellius</h3>
-				<ol class="roman">
+				<ol>
 					<li id="book-7-3-1">
 						<p>Of the origin of the Vitellii different and widely varying accounts are given, some saying that the family was ancient and noble, others that it was new and obscure, if not of mean extraction. I should believe that these came respectively from the flatterers and detractors of the emperor, were it not for a difference of opinion about the standing of the family at a considerably earlier date. We have a book of Quintus Elogius addressed to Quintus Vitellius, quaestor of the Deified Augustus, in which it is written that the Vitellii were sprung from Faunus, king of the Aborigines, and Vitellia, who was worshipped as a goddess in many places;’ and that they ruled in all Latium. That the surviving members of the family moved from the Sabine district to Rome and were enrolled among the patricians. That traces of this stock endured long afterwards in the Vitellian Road, running from the Janiculum all the way to the sea, as well as in a colony of the same name, which in ancient days the family had asked the privilege of defending against the Aequicoli with troops raised from their own line. That when afterwards a force was sent into Apulia at the time of the Samnite war, some of the Vitellii settled at Nuceria, and that after a long time their descendants returned to the city and resumed their place in the senatorial order.</p>
 					</li>
