--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops" epub:prefix="z3998: http://www.daisy.org/z3998/2012/vocab/structure/, se: https://standardebooks.org/vocab/1.0" xml:lang="en-GB">
 	<head>
-		<title>Book 8</title>
+		<title>Book 8: The Deified Vespasian⁠—The Deified Titus⁠—Domitian</title>
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-8" epub:type="part">
 			<h2 epub:type="title">
-				<span>Book <span epub:type="z3998:roman">VIII</span></span>
+				<span epub:type="z3998:roman">VIII</span>
 				<span epub:type="subtitle">The Deified Vespasian⁠—The Deified Titus⁠—Domitian</span>
 			</h2>
 			<section id="book-8-1" epub:type="chapter">
 				<h3 epub:type="title">The Deified Vespasian</h3>
-				<ol class="roman">
+				<ol>
 					<li id="book-8-1-1">
 						<p>The empire, which for a long time had been unsettled and, as it were, drifting, through the usurpation and violent death of three emperors, was at last taken in hand and given stability by the Flavian family. This house was, it is true, obscure and without family portraits, yet it was one of which our country had no reason whatever to be ashamed, even though it is the general opinion that the penalty which Domitian paid for his avarice and cruelty was fully merited.</p>
 						<p>Titus Flavius Petro, a burgher of Reate and during the civil war a centurion or a volunteer veteran<a href="endnotes.xhtml#note-828" id="noteref-828" epub:type="noteref">828</a> on Pompey’s side, fled from the field of Pharsalus and went home, where after at last obtaining pardon and an honourable discharge, he carried on the business of a collector of moneys. His son, surnamed Sabinus (although some say that he was an ex-centurion of the first grade; others that while still in command of a cohort he was retired because of ill-health) took no part in military life, but farmed the public tax of a fortieth<a href="endnotes.xhtml#note-829" id="noteref-829" epub:type="noteref">829</a> in Asia. And there existed for some time statues erected in his honour by the cities of Asia, inscribed “To an honest tax-gatherer.” Later he carried on a banking business in the Helvetian country and there he died, survived by his wife, Vespasia Polla, and by two of her children, of whom the elder, Sabinus, rose to the rank of prefect of Rome, and the younger, Vespasian, even to that of emperor. Polla, who was born of an honourable family at Nursia, had for father Vespasius Pollio, thrice tribune of the soldiers and prefect of the camp,<a href="endnotes.xhtml#note-830" id="noteref-830" epub:type="noteref">830</a> while her brother became a senator with the rank of praetor. There is moreover on the top of a mountain, near the sixth milestone on the road from Nursia to Spoletium, a place called Vespasiae, where many monuments of the Vespasii are to be seen, affording strong proof of the renown and antiquity of the house. I ought to add that some have bandied about the report, that Petro’s father came from the region beyond the Po and was a contractor for the day-labourers who come regularly every year from Umbria to the Sabine district, to till the fields; but that he settled in the town of Reate and there married. Personally I have found no evidence whatever of this, in spite of rather careful investigation.</p>
@@ -148,7 +148,7 @@
 			</section>
 			<section id="book-8-2" epub:type="chapter">
 				<h3 epub:type="title">The Deified Titus</h3>
-				<ol class="roman">
+				<ol>
 					<li id="book-8-2-1">
 						<p>Titus, of the same surname as his father, was the delight and darling of the human race; such surpassing ability had he, by nature, art, or good fortune, to win the affections of all men, and that, too, which is no easy task, while he was emperor; for as a private citizen, and even during his father’s rule, he did not escape hatred, much less public criticism.</p>
 						<p>He was born on the third day before the Kalends of January, in the year memorable for the death of Gaius, in a mean house near the Septizonium<a href="endnotes.xhtml#note-877" id="noteref-877" epub:type="noteref">877</a> and in a very small dark room besides; for it still remains and is on exhibition.</p>
@@ -202,7 +202,7 @@
 			</section>
 			<section id="book-8-3" epub:type="chapter">
 				<h3 epub:type="title">Domitian</h3>
-				<ol class="roman">
+				<ol>
 					<li id="book-8-3-1">
 						<p>
 							<span id="book-8-3-1-1">Domitian was born on the ninth day before the Kalends of November of the year when his father was consul elect and was about to enter on the office in the following month, in a street of the sixth region called “the Pomegranate,”<a href="endnotes.xhtml#note-893" id="noteref-893" epub:type="noteref">893</a> in a house which he afterwards converted into a temple of the Flavian family. He is said to have passed the period of his boyhood and his early youth in great poverty and infamy. For he did not possess a single piece of plate and it is a well known fact that Claudius Pollio, a man of praetorian rank, against whom Nero’s poem entitled “The One-eyed Man” is directed, preserved a letter in Domitian’s handwriting and sometimes exhibited it, in which the future emperor promised him an assignation; and there have not been wanting those who declared that Domitian was also debauched by Nerva, who succeeded him. </span>
