Fixed lint errors in endnotes.

--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -265,8 +265,7 @@
 					<p>See <a href="book-1.xhtml#book-1-20-3">Julius, <span epub:type="z3998:roman">XX</span>.3</a>, note. <a href="book-2.xhtml#noteref-85" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-86" epub:type="endnote">
-					<p>According to the <i epub:type="se:name.publication.book">Thesaurus Linguae Latinae</i> <abbr>s.v.</abbr> <i xml:lang="la">collybus</i>, Suetonius misunderstood Cassius, who used <i xml:lang="la">collybus</i> of a kind of cake.
-				 <a href="book-2.xhtml#noteref-86" epub:type="backlink">↩</a></p>
+					<p>According to the <i epub:type="se:name.publication.book">Thesaurus Linguae Latinae</i> <abbr>s.v.</abbr> <i xml:lang="la">collybus</i>, Suetonius misunderstood Cassius, who used <i xml:lang="la">collybus</i> of a kind of cake. <a href="book-2.xhtml#noteref-86" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-87" epub:type="endnote">
 					<p><abbr>i.e.</abbr> Hadrian. <a href="book-2.xhtml#noteref-87" epub:type="backlink">↩</a></p>
@@ -419,8 +418,7 @@
 					<p><abbr>Cf.</abbr> <a href="book-1.xhtml#book-1-39-2">Julius, <span epub:type="z3998:roman">XXXIX</span>.2</a>. <a href="book-2.xhtml#noteref-136" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-137" epub:type="endnote">
-					<p>The auditorium was divided horizontally into three parts: <i xml:lang="la">ima</i> (<i xml:lang="la">prima</i>), <i xml:lang="la">media</i>, and <i xml:lang="la">summa</i> (<i xml:lang="la">ultima</i>) <i xml:lang="la">cavea</i>.
-				 <a href="book-2.xhtml#noteref-137" epub:type="backlink">↩</a></p>
+					<p>The auditorium was divided horizontally into three parts: <i xml:lang="la">ima</i> (<i xml:lang="la">prima</i>), <i xml:lang="la">media</i>, and <i xml:lang="la">summa</i> (<i xml:lang="la">ultima</i>) <i xml:lang="la">cavea</i>. <a href="book-2.xhtml#noteref-137" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-138" epub:type="endnote">
 					<p>This puzzling statement is thus explained by Baumgarten-Crusius: “<abbr>i.e.</abbr> <i xml:lang="la">ex aedibus proxime adjacentibus, unde prospectus erat in Circum. Coenacula autem in summis aedibus esse solebant. Idem narrat Dio 57.11 de Tiberio:</i> <span xml:lang="grc">τοὺς τῶν ἵππων ἀγῶνας ἐξ οἰκίας καὶ αὐτὸς τῶν ἀπελευθέρων τινὸς πολλάκις ἑώρα</span>.” <a href="book-2.xhtml#noteref-138" epub:type="backlink">↩</a></p>
@@ -795,8 +793,7 @@
 					<p><abbr>Cf.</abbr> <a href="book-2.xhtml#book-2-66-3">Augustus, <span epub:type="z3998:roman">LXVI</span>.3</a>. <a href="book-3.xhtml#noteref-261" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-262" epub:type="endnote">
-					<p>The title of <i xml:lang="la">legatus</i> gave him an official position and concealed the fact that his absence was a forced one.
-				 <a href="book-3.xhtml#noteref-262" epub:type="backlink">↩</a></p>
+					<p>The title of <i xml:lang="la">legatus</i> gave him an official position and concealed the fact that his absence was a forced one. <a href="book-3.xhtml#noteref-262" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-263" epub:type="endnote">
 					<p>The Greek dress; see note on <a href="book-2.xhtml#book-2-98-3">Augustus, <span epub:type="z3998:roman">XCVIII</span>.3</a>. <a href="book-3.xhtml#noteref-263" epub:type="backlink">↩</a></p>
@@ -2347,7 +2344,7 @@
 					<p>See note on <a href="book-4.xhtml#book-4-58-2">Caligula, <span epub:type="z3998:roman">LVIII</span>.2</a>. <a href="book-7.xhtml#noteref-778" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-779" epub:type="endnote">
-					<p>In the Forum; see <a href="book-2.xhtml#book-2-57">Augustus, <span epub:type="z3998:roman">LVII</span>.1</a>. <i xml:lang="la">Curti lacus:</i> A marsh in the Roman Forum, the site of which was afterwards enclosed by a wall and has recently been unearthed. Various stories are told of its origin.<a href="book-7.xhtml#noteref-779" epub:type="backlink">↩</a></p>
+					<p>In the Forum; see <a href="book-2.xhtml#book-2-57">Augustus, <span epub:type="z3998:roman">LVII</span>.1</a>. <i xml:lang="la">Curti lacus:</i> A marsh in the Roman Forum, the site of which was afterwards enclosed by a wall and has recently been unearthed. Various stories are told of its origin. <a href="book-7.xhtml#noteref-779" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-780" epub:type="endnote">
 					<p><i epub:type="se:name.publication.book">Iliad</i>, 5.254; <i epub:type="se:name.publication.book">Odyssey</i> 21.426. <a href="book-7.xhtml#noteref-780" epub:type="backlink">↩</a></p>
